--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "my-advocacy-site",
+  "name": "Dr-Fernando-Vasconcellos",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export" 
   },
   "dependencies": {
     "next": "15.1.4",
